--- a/common.css
+++ b/common.css
@@ -40,6 +40,7 @@ nav ul button {
     padding: 5px 15px;
     min-height: 30px;
     min-width: 120px;
+    /* position: fixed; */
 }
 
 nav ul button a {
